# sporteasy-calendar-connector

./: .dockerignore  .env-example  .gitignore  Dockerfile  Readme.md  app.py  calendar_converter.py  docker-compose.yml  env_to_base64.py  index.html  list_teams.py  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: build_image.yml  build_test_lint_image.yml  test.yml
calendar_connector/: calendar_converter.py  consts.py  cryptography.py  cryptography_key_generation.py  custom_exceptions.py  data_decoder.py  datetime_utils.py  env.py  event_convertor.py  exceptions.py  logging_correlation.py  presence_updater.py  sporteasy_connector.py  utils.py
calendar_connector/database/: __init__.py  all_models.py  base_models.py  create_tables.py  db_connector.py  user.py
calendar_connector/event_utils/: date.py  description.py  location.py  score.py  summary.py
calendar_connector/html/: auto_close.html
calendar_connector/requests_types/: event_type.py  me_type.py  season_type.py  shared_type.py  team_type.py
calendar_connector/types/: event_type.py  me_type.py  request_type.py  team_type.py
test/: test_correlation_id.py  test_cryptography.py  test_data_decoder.py  test_env.py  test_get_calendar_text.py  test_get_calendar_text_with_links.py  test_get_calendar_text_without_links.py  test_list_teams.py  test_login.py  test_utils.py  utils.py
utils/: calendar_converter.py  consts.py  data_decoder.py  datetime_utils.py  env.py  test_data_decoder.py  test_env.py  test_utils.py  utils.py
web-app/: package.json  pnpm-lock.yaml  svelte.config.js
(+30 files in other folders)
