[project]
name = "sporteasy-calendar-connector"
version = "0.1.0"
description = "A connector to synchronize SportEasy calendar with other calendar applications like Google Calendar."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask==3.1.3",
    "google-cloud-logging>=3.15.0",
    "gunicorn==25.3.0",
    "icalendar==7.0.3",
    "mypy==1.20.2",
    "peewee==4.0.4",
    "pynacl==1.6.2",
    "pytest==8.2.0",
    "python-dotenv==1.2.2",
    "pytz==2026.1.post1",
    "requests==2.33.1",
    "requests-mock==1.12.1",
    "ruff>=0.15.11",
    "types-peewee==4.0.0.20260408",
    "types-pytz==2026.1.1.20260408",
    "types-requests==2.33.0.20260408",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

